<?xml version="1.0"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>The motor_controller package. Maps requested thrust to pwm values, inteded to work with the i2c_pwm_board package.</description>
  <maintainer email="domj.roli@gmail.com">Volubepossum</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>